--- a/package.yaml
+++ b/package.yaml
@@ -6,6 +6,8 @@ maintainer: mayhem@arbor.net
 copyright: Arbor Networks
 license: MIT
 github: packetloop/arbor-ip
+description: something something something something something
+synopsis: something
 extra-source-files:
 - README.md
 
